Tue Nov 17 15:32:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_binmode): check if closed regardless platforms.
	  [ruby-core:25363]

Tue Nov 17 15:31:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (round): added declaration.  [ruby-dev:39222]

Mon Nov 16 19:58:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_sweep): makes new room if object space is full of
	  finalized objects and has no free objects.  [ruby-dev:39201]

Mon Nov 16 19:45:27 2009  Tanaka Akira  <akr@fsij.org>

	* util.c: suppress strict-aliasing warning with gcc-4.4.0 -O2 to fix
	  infinite loop by ruby -e "1.402e-45" .

Mon Nov 16 19:28:23 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_i): revert a part of
	  r23645, which was not a bug fix. [ruby-dev:39474]

Fri Sep 11 11:56:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_singleton_class_clone): Qnil must be used for a null
	  class reference when we use NIL_P() to check class reference
	  validity.  The bug was exposed by the spec test of Sequel.

	* eval.c (ruby_init): Use NEW_CREF().

Thu Sep 10 10:53:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_sysopen): workaround for MSVCRT's bug.
	  [ruby-core:24838]

Mon Sep  7 19:52:44 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): need select for WAIT_SELECT, even if
	  already timeout.  [ruby-dev:38971]
	  (WAIT_DONE): defined for mark threads which can be runnable.

Mon Sep  7 19:52:44 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): refine previous change.

Mon Sep  7 19:52:44 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): fix condition for making thread
	  runnable.  [ruby-core:23515]

Sun Sep  6 19:47:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
	  [ruby-core:24767]

Sun Sep  6 01:34:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
