@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-11-17"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20091117
-#define RUBY_PATCHLEVEL 207
+#define RUBY_PATCHLEVEL 208
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
